fix(navigation): align menu items (#1753)

--- a/packages/vapor/scss/components/navigation-loading.scss
+++ b/packages/vapor/scss/components/navigation-loading.scss
@@ -49,3 +49,7 @@
 .mod-sub-navigation-left-margin {
     margin-left: $navigation-horizontal-space;
 }
+
+.navigation-menu-section-header.no-icon + .navigation-menu-section-items .mod-sub-navigation-left-margin {
+    margin-left: $navigation-horizontal-space-no-icon;
+}
